# OpenBrowser

./: .gitignore  COPYING  README.md  build-deb.sh  build.sh  install.sh  meson.build  openbrowser_1.0.0-1_amd64.deb
data/: Login.json  about.html  bookmarks-page.html  com.openbrowser.desktop  downloads-page.html  error.html  io.github.ramm_fr.OpenBrowser.desktop  io.github.ramm_fr.OpenBrowser.metainfo.xml  offline.html  openbrowser.gresource.xml  passwords-page.html  settings-page.html  startup.html  style.css  welcome.html
debian/: changelog  control  copyright  rules
flatpak/: FLATHUB.md  io.github.ramm_fr.OpenBrowser.local.yml  io.github.ramm_fr.OpenBrowser.yml
landing/: index.html  serve.sh
src/: bookmark-manager.c  bookmark-manager.h  browser-tab.c  browser-tab.h  browser-window.c  browser-window.h  download-manager.c  download-manager.h  extension-manager.c  extension-manager.h  history-manager.c  history-manager.h  main.c  password-manager.c  password-manager.h  settings-manager.c  settings-manager.h
store/: extensions.json
